--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "homepage": "https://github.com/Vikraam27/bookshelf_api#readme",
   "dependencies": {
     "@hapi/hapi": "^20.2.1",
-    "dotenv": "^16.0.0"
+    "dotenv": "^16.0.0",
+    "nanoid": "^3.3.1"
   },
   "devDependencies": {
     "eslint": "^8.10.0",
